@@ -6,6 +6,7 @@ Changes in 2.18.3 -- ?
 
 * New features:
   - Tools->Quick Remove->Remove Fingerings
+  - Tools->Quick Remove->Remove Comments
 * Improvements:
   - When tapping a tempo in the Score Wizard, it is now configurable whether
     a "common" metronome value is picked, or the exact tapped BPM (#792)
